--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,7 @@ PAYSTACK_BASE_URL=''
 PAYSTACK_SECRET_KEY=''
 
 UI_URL='https://multicash.vercel.app'
+
+CLOUDINARY_CLOUD_NAME=''
+CLOUDINARY_API_KEY=''
+CLOUDINARY_API_SECRET=''
