--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "cache-manager": "^5.4.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cloudinary": "^2.4.0",
     "esm": "^3.2.25",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
@@ -80,14 +81,14 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "rimraf": "5.0.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
-    "rimraf": "5.0.5"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
