--- a/backend/package.json
+++ b/backend/package.json
@@ -45,20 +45,17 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "^2.4.0",
-    "esm": "^3.2.25",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.3",
     "nodemailer": "^6.9.11",
     "nunjucks": "^3.2.4",
-    "openai": "^4.28.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "0.2.1",
     "rimraf": "5.0.5",
-    "rxjs": "7.8.1",
-    "sparkpost": "^2.1.4"
+    "rxjs": "7.8.1"
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
