refund payin currency on failed exchange

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,5 @@ UI_URL='https://multicash.vercel.app'
 CLOUDINARY_CLOUD_NAME=''
 CLOUDINARY_API_KEY=''
 CLOUDINARY_API_SECRET=''
+
+PORTABLE_DID_BASE64=''
