--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "^2.4.0",
+    "firebase-admin": "^12.5.0",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.3",
