--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,3 +30,5 @@ FIREBASE_PRIVATE_KEY=''
 STRIPE_BASE_URL='https://api.stripe.com'
 STRIPE_SECRET_KEY=''
 STRIPE_WEBHOOK_SECRET=''
+
+INTERCOM_SECRET_KEY=''
