--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@headlessui/vue": "1.7.1",
+    "@intercom/messenger-js-sdk": "^0.0.14",
     "@kyvg/vue3-notification": "^3.1.3",
     "@paystack/inline-js": "^2.20.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
