--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "puppeteer": "^23.6.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "0.2.1",
     "request-ip": "^3.3.0",
     "rimraf": "5.0.5",
