--- a/backend/package.json
+++ b/backend/package.json
@@ -61,8 +61,7 @@
     "request-ip": "^3.3.0",
     "rimraf": "5.0.5",
     "rxjs": "7.8.1",
-    "stripe": "^16.12.0",
-    "chromium": "3.0.3"
+    "stripe": "^16.12.0"
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
@@ -92,7 +91,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "chromium": "3.0.3"
   },
   "jest": {
     "moduleFileExtensions": [
