--- a/backend/package.json
+++ b/backend/package.json
@@ -55,7 +55,6 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "puppeteer": "^23.6.0",
     "qrcode": "^1.5.4",
     "reflect-metadata": "0.2.1",
     "request-ip": "^3.3.0",
@@ -91,8 +90,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
-    "chromium": "3.0.3"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
