--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "class-validator": "0.14.1",
     "cloudinary": "^2.4.0",
     "firebase-admin": "^12.5.0",
+    "html-pdf": "^3.0.1",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.3",
