--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@tbdex/http-client": "1.1.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/html-pdf": "^3.0.3",
     "@types/lodash": "^4.14.202",
     "@types/nunjucks": "^3.2.6",
     "@types/passport-local": "^1.0.38",
