--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,3 +34,6 @@ STRIPE_WEBHOOK_SECRET=''
 INTERCOM_SECRET_KEY=''
 
 IPAPI_ACCESS_KEY=''
+
+WISE_BASE_URL='https://api.sandbox.transferwise.tech/'
+WISE_API_KEY=''
