--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,12 @@
-# 
-FROM node:20
+FROM ghcr.io/puppeteer/puppeteer:23.6.0
 
-# 
-WORKDIR /code
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
 
-ENV USE_DOCKER=true
+WORKDIR /usr/src/app
 
-# 
-COPY ./package.json /code/package.json
+COPY package*.json ./
+RUN npm ci
+COPY . .
 
-# 
-RUN yarn
-
-# 
-COPY . /code
-
-# 
-CMD ["yarn", "run", "start"]
+CMD ["node", "--optimize_for_size", "--max_old_space_size=460", "--gc_interval=100", "dist/main.js"]
