--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,5 +9,6 @@ WORKDIR /code
 COPY ./package.json /code/package.json
 RUN yarn
 COPY . /code
+RUN yarn build
 
 CMD ["node", "--optimize_for_size", "--max_old_space_size=460", "--gc_interval=100", "dist/main.js"]
