--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,11 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable \
     USE_DOCKER=true
 
-WORKDIR /code
+WORKDIR /usr/src/app
 
-COPY ./package.json /code/package.json
+COPY package*.json ./
 RUN yarn
-COPY . /code
+COPY . .
 RUN yarn build
 
 CMD ["node", "--optimize_for_size", "--max_old_space_size=460", "--gc_interval=100", "dist/main.js"]
