--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,7 @@ FROM ghcr.io/puppeteer/puppeteer:23.6.0
 
 # Set necessary environment variables to skip Chromium download and define cache directory
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable \
-    PUPPETEER_CACHE_DIR=/opt/render/project/puppeteer
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable 
 
 WORKDIR /usr/src/app
 
@@ -19,13 +18,6 @@ COPY . .
 RUN yarn build
 
 # Puppeteer cache handling
-RUN if [ ! -d $PUPPETEER_CACHE_DIR ]; then \
-        echo "...Copying Puppeteer Cache from Build Cache" && \
-        cp -R $XDG_CACHE_HOME/puppeteer/ $PUPPETEER_CACHE_DIR; \
-    else \
-        echo "...Storing Puppeteer Cache in Build Cache" && \
-        cp -R $PUPPETEER_CACHE_DIR $XDG_CACHE_HOME; \
-    fi
-
+RUN npx puppeteer browsers install chrome
 # Set the command to start your application
 CMD ["node", "--optimize_for_size", "--max_old_space_size=460", "--gc_interval=100", "dist/main.js"]
