--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,20 @@
 # Use Puppeteer base image
-FROM ghcr.io/puppeteer/puppeteer:23.6.0
-
-# Set necessary environment variables to skip Chromium download and define cache directory
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable 
+FROM node:lts-alpine
 
 WORKDIR /usr/src/app
+
+RUN apk update && apk add --no-cache nmap && \
+    echo @edge https://dl-cdn.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
+    echo @edge https://dl-cdn.alpinelinux.org/alpine/edge/main >> /etc/apk/repositories && \
+    apk update && \
+    apk add --no-cache \
+      chromium \
+      harfbuzz \
+      "freetype>2.8" \
+      ttf-freefont \
+      nss
+
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 
 # Copy package.json and yarn.lock to install dependencies
 COPY package*.json ./
