--- a/backend/package.json
+++ b/backend/package.json
@@ -61,7 +61,8 @@
     "request-ip": "^3.3.0",
     "rimraf": "5.0.5",
     "rxjs": "7.8.1",
-    "stripe": "^16.12.0"
+    "stripe": "^16.12.0",
+    "uuid": "^11.0.2"
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
